Change graphical abstract

--- a/graphicalAbstract.tex
+++ b/graphicalAbstract.tex
@@ -6,11 +6,16 @@
 \begin{document}
 \setlength{\unitlength}{1cm}
 \begin{picture}(20,15)
-  \put(0,0){\includegraphics[width=\textwidth]{jlr}}
-  \put(2,5){\scalebox{1.5}{\color{white}Spectra calculated}}
-  \put(2,4){\scalebox{1.5}{\color{white}from fit to one sample}}
-  \put(7.8,5){\scalebox{1.5}{\color{white}Spectra measured on}}
-  \put(7.8,4){\scalebox{1.5}{\color{white}7 positions on 3 samples}}
-  \put(7.8,3){\scalebox{1.5}{\color{white}with $I_1<I_2<I_3$}}
+  \put(0,0){\includegraphics[width=\textwidth]{jlrb}}
+  \put(2.5,1){\color{white}
+    \put(0,5){\scalebox{1.5}{Spectra calculated}}
+    \put(0,4){\scalebox{1.5}{from fit.}}
+  }
+  \put(8.5,1){\color{white}
+    \put(0,5){\scalebox{1.5}{Spectra measured at}}
+    \put(0,4){\scalebox{1.5}{7 positions on each of}}
+    \put(0,3){\scalebox{1.5}{3 samples with}}
+    \put(0,2){\scalebox{1.5}{$I_1<I_2<I_3$}}
+  }
 \end{picture}
 \end{document}
