Rename figures to fig1, fig2, etc.

--- a/paper.tex
+++ b/paper.tex
@@ -252,7 +252,7 @@ but for a small tip, which we approximate as a
 point current source.
 \begin{figure}
   \centering
-  \includegraphics[width=\textwidth]{celdan1.png}
+  \includegraphics[width=\textwidth]{fig1.png}
   \caption{Prism shaped electrolytic cell with a rectangular base of
     sides $a$, $b$ filled with electrolyte up to a height $c$. The
     walls of the cell are insulating and the bottom is completely
@@ -350,7 +350,7 @@ infinitely many new images so that Eqs. \eqref{eq:ground} and
 \eqref{eq:E0} hold when all charges are considered together.
 \begin{figure}
   \centering
-  \includegraphics[width=\textwidth]{paper-1}
+  \includegraphics[width=\textwidth]{fig2}
   \caption{Top view of the $z=z_0$ plane of the fictitious system formed by reflections of
     the electrolytic cell (light blue) showing the charge at the
     tip of the electrode (red dot) and its images on the walls of the
@@ -373,7 +373,7 @@ r_1=(-x_0, y_0, z_0)$, $\bm r_2=(x_0, -y_0, z_0)$ and $\bm r_3=(-x_0,
 image charges within the plane $y=y_0$.
 \begin{figure}
   \centering
-  \includegraphics[width=\textwidth]{paper-2}
+  \includegraphics[width=\textwidth]{fig3}
   \caption{Side view of the $y=y_0$ plane of the fictitious system formed by reflections of
     the electrolytic cell (light blue)
     showing the charge at the tip of the electrode (red dot), its
@@ -557,9 +557,9 @@ properties.
 \label{sec:procedures}
 \begin{figure}
   \centering
-  \includegraphics[width=.8\textwidth]{paper-3}\\[12pt]
-  \includegraphics[width=.8\textwidth]{paper-4}\\[12pt]
-  \includegraphics[width=.8\textwidth]{paper-5}
+  \includegraphics[width=.8\textwidth]{fig4a}\\[12pt]
+  \includegraphics[width=.8\textwidth]{fig4b}\\[12pt]
+  \includegraphics[width=.8\textwidth]{fig4c}
 
   \caption{(a): Schematic experimental set-up for
     the fabrication of GRIN PS structures. We show a side view of the
@@ -670,8 +670,8 @@ cross-sectional) was observed with a {\em Hitachi SU1510} scanning electron micr
 \begin{figure}
   \centering
   \begin{picture}(400,300)
-    \put(0,0){\includegraphics[width=.8\textwidth]{j_Ivsx.png}}
-    \put(160,140){\includegraphics[trim=50 50 70 80,clip,width=.4\textwidth]{j_Ivsxy.png}}
+    \put(0,0){\includegraphics[width=.8\textwidth]{fig5a.png}}
+    \put(160,140){\includegraphics[trim=50 50 70 80,clip,width=.4\textwidth]{fig5b.png}}
   \end{picture}
   \caption{Normalized current density $j_\perp(x,y,0)/I$ for a system
     as in Figs. \ref{f:celda} and \ref{fig:DE1} for a cell of
@@ -696,7 +696,7 @@ the electrode.
 \label{sec:ps-grin-single}
 \begin{figure}
  \centering
- \includegraphics[width=\textwidth]{G3I20proc}
+ \includegraphics[width=\textwidth]{fig6}
   \caption{ Photograph of sample $S_3$ prepared as described in
     Sec. \ref{sec:fabrication-ps-grin} using the same parameters as
     in Fig. \ref{fig:DR1} with a current $ I_3=20 \text{mA}$,
@@ -778,12 +778,12 @@ three regions around the left side, the center, and the right side
 of the sample shown in Fig. \ref{fig:SI3}.
 \begin{figure}
   \centering
-  \includegraphics[width=.3\textwidth]{sema}
-  \includegraphics[width=.3\textwidth]{semb}
-  \includegraphics[width=.3\textwidth]{semc}
-  \includegraphics[width=.3\textwidth]{semd}
-  \includegraphics[width=.3\textwidth]{seme}
-  \includegraphics[width=.3\textwidth]{semf}
+  \includegraphics[width=.3\textwidth]{fig7a}
+  \includegraphics[width=.3\textwidth]{fig7b}
+  \includegraphics[width=.3\textwidth]{fig7c}
+  \includegraphics[width=.3\textwidth]{fig7d}
+  \includegraphics[width=.3\textwidth]{fig7e}
+  \includegraphics[width=.3\textwidth]{fig7f}
   \caption{Top ((a), (b), and (c)) and lateral ((d), (e), and (f)) SEM
     micrographs of the sample $S_3$ taken from a region corresponding to the left
     side ((a) and (d)), center ((b) and (e)), and right side ((c) and
@@ -808,7 +808,7 @@ etching rate variations along the sample.
 
 \begin{figure}
   \centering
-  \includegraphics[width=\textwidth]{R5migradvslambda}
+  \includegraphics[width=\textwidth]{fig8}
   \caption{Reflectance spectra at different positions
     ($x'_n=0.2-1.6\,\text{cm}$, $y=0.74\,\text{cm}$)
     on sample $S_1$ ($I_1=5\,\text{mA}$). We show
@@ -818,7 +818,7 @@ etching rate variations along the sample.
 \end{figure}
 \begin{figure}
   \centering
-  \includegraphics[width=\textwidth]{R10migradvslambda}
+  \includegraphics[width=\textwidth]{fig9}
   \caption{Reflectance spectra at different positions
     ($x'_n=0.2-1.6\,\text{cm}$, $y=0.74\,\text{cm}$)
     on sample $S_2$ ($I_1=10\,\text{mA}$). We show
@@ -829,7 +829,7 @@ etching rate variations along the sample.
 
 \begin{figure}
   \centering
-  \includegraphics[width=\textwidth]{R20migradvslambda}
+  \includegraphics[width=\textwidth]{fig10}
   \caption{Reflectance spectra at different positions
     ($x'_n=0.2-1.6\,\text{cm}$, $y=0.74\,\text{cm}$)
     on sample $S_3$ ($I_3=20\,\text{mA}$) (Fig. \ref{fig:SI3}),
@@ -914,7 +914,7 @@ the calculated density current $j_\perp$, as shown for our three
 samples in Fig. \ref{fig:p}.
 \begin{figure}
   \centering
-  \includegraphics[width=\textwidth]{pvsjerr}
+  \includegraphics[width=\textwidth]{fig11}
   \caption{Porosity vs. current density for the three samples
     $S_1$, $S_2$, $S_3$. The arrows point to data that correspond to
     position $x'_1=0.2\,\text{cm}$ (see text). We include a linear fit of the form
@@ -951,7 +951,7 @@ the calculated density current, as shown for our three
 samples in Fig. \ref{fig:v}.
 \begin{figure}
   \centering
-  \includegraphics[width=\textwidth]{vvsjerr}
+  \includegraphics[width=\textwidth]{fig12}
   \caption{Etching rate vs. current density for three samples
     $S_1$, $S_2$, $S_3$. The arrows point to data that correspond to
     position $x'_1=0.2\,\text{cm}$ (see text). We include a linear fit of the form
@@ -984,7 +984,7 @@ illustrated in Fig. \ref{fig:Rvsjl} for the parameters that correspond
 to our samples.
 \begin{figure}
   \centering
-  \includegraphics[width=\textwidth]{jlrb}
+  \includegraphics[width=\textwidth]{fig13}
   \caption{Reflection $R$ of a PS film as a function of the current density
     current $j_\perp$ and wavelength $\lambda$ for an etching time
     $t=250\,\text{s}$. Theory (left panel) and experiment (right
