Update graphical abstract to new figure name

--- a/graphicalAbstract.tex
+++ b/graphicalAbstract.tex
@@ -6,7 +6,7 @@
 \begin{document}
 \setlength{\unitlength}{1cm}
 \begin{picture}(20,15)
-  \put(0,0){\includegraphics[width=\textwidth]{jlrb}}
+  \put(0,0){\includegraphics[width=\textwidth]{fig13}}
   \put(2.5,1){\color{white}
     \put(0,5){\scalebox{1.5}{Spectra calculated}}
     \put(0,4){\scalebox{1.5}{from fit.}}
