Correct couple of spelling mistakes

--- a/paper.tex
+++ b/paper.tex
@@ -538,7 +538,7 @@ in particular, to calculate the current $j_\perp(x,y,0)$ that attacks
 the substrate to produce the PS sample. As expected, the current
 at the surface $z=0$ of the sample becomes more homogeneous as the
 distance $z_0$ to the tip of the electrode and the height of the
-electrolite $c>z_0$ increase, as each term in the sum decays
+electrolyte $c>z_0$ increase, as each term in the sum decays
 approximately exponentially with increasing $z_0$.
 Integrating over the surface of the sample we verify
 \begin{equation}
@@ -796,7 +796,7 @@ Fig. \ref{fig:sem}) and the sample becomes much thinner (panels (d) to
 (f)). We remark that these micrographs were taken at three positions
 that were not chosen to correspond to the eight locations at which we measured the
 optical spectra. Thus, we didn't use SEM measurements for the quantitative
-determination of neither the thickess nor the porosity; they were used
+determination of neither the thickness nor the porosity; they were used
 for the qualitative verification of the expected (Fig. \ref{fig:DE1})
 and obtained (Table \ref{t:jpdv}) results. Actually, one of our
 goals is to show that relatively inexpensive reflectance
